<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Simplifly</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="nameview">Username</string>
    <string name="namefield"></string>
    <string name="passwordview">Password</string>
    <string name="passwordfield"></string>
    <string name="button">"Sign in "</string>

</resources>
