<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.android.simplify.v1.Simpliflyv1Activity"
    tools:ignore="MergeRootFrame" >

    <Gallery
        android:id="@+id/gallery1"
        android:layout_width="256dp"
        android:layout_height="113dp"
        android:layout_gravity="center"
        android:background="@drawable/logo2" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="none"
        android:visibility="invisible" />

    <LinearLayout
        android:layout_width="198dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/nameview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nameview" />

        <EditText
            android:id="@+id/namefield"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/namefield" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/passwordview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/passwordview" />

        <EditText
            android:id="@+id/passwordfield"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberPassword"
            android:text="@string/passwordfield" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button" />
    </LinearLayout>

</LinearLayout>